--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,6 @@ spring.mail.password=mezfbhkikufzebhc
 spring.mail.properties.mail.smtl.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+
+#community
+community.path.domain=http://localhost8080
