--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,15 @@
-# ServerProperties
+# Server
 server.port=8080
 server.servlet.context-path=/community
 
-# ThymeleafProperties
+#community
+community.path.domain=http://localhost:8080
+community.path.upload=D:/java-program/franky-community/headimg
+
+# Thymeleaf
 spring.thymeleaf.cache=false
 
-# DataSourceProperties
+# DataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/community?characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
@@ -15,14 +19,14 @@ spring.datasource.hikari.maximum-pool-size=15
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.idle-timeout=30000
 
-# MybatisProperties
+# Mybatis
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.franky.community.entity
 mybatis.configuration.useGeneratedKeys=true
 mybatis.configuration.mapUnderscoreToCamelCase=true
 
 
-# MailProperties
+# Mail
 spring.mail.host=smtp.qq.com
 spring.mail.username=2378648054@qq.com
 spring.mail.password=mezfbhkikufzebhc
@@ -30,5 +34,3 @@ spring.mail.properties.mail.smtl.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 
-#community
-community.path.domain=http://localhost8080
