--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,9 @@ mybatis.type-aliases-package=com.franky.community.entity
 mybatis.configuration.useGeneratedKeys=true
 mybatis.configuration.mapUnderscoreToCamelCase=true
 
+# logger
+logging.level.com.franky.community = debug
+logging.file.name=d:/java-program/franky-community/log/debug.log
 
 # Mail
 spring.mail.host=smtp.qq.com
@@ -33,4 +36,9 @@ spring.mail.password=mezfbhkikufzebhc
 spring.mail.properties.mail.smtl.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+
+# redis
+spring.data.redis.database=11
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
 
