--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 
 # logger
 logging.level.com.franky.community = debug
-logging.file.name=d:/java-program/franky-community/log/debug.log
+logging.file=d:/java-program/franky-community/log/debug.log
 
 # Mail
 spring.mail.host=smtp.qq.com
@@ -38,7 +38,18 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 
 # redis
-spring.data.redis.database=11
-spring.data.redis.host=localhost
+spring.redis.database=11
+spring.redis.host=localhost
 spring.data.redis.port=6379
+
+
+#kafka
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=test-consumer-group
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-commit-interval=3000
+
+#es
+spring.data.elasticsearch.cluster-name=franky
+spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
 
