--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,3 +52,26 @@ spring.kafka.consumer.auto-commit-interval=3000
 spring.data.elasticsearch.cluster-name=franky
 spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
 
+# TaskExecutionProperties
+spring.task.execution.pool.core-size=5
+spring.task.execution.pool.max-size=15
+spring.task.execution.pool.queue-capacity=100
+
+# TaskSchedulingProperties
+spring.task.scheduling.pool.size=5
+
+# QuartzProperties
+spring.quartz.job-store-type=jdbc
+spring.quartz.scheduler-name=communityScheduler
+spring.quartz.properties.org.quartz.scheduler.instanceId=AUTO
+spring.quartz.properties.org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
+spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+spring.quartz.properties.org.quartz.jobStore.isClustered=true
+spring.quartz.properties.org.quartz.threadPool.class=org.quartz.simpl.SimpleThreadPool
+spring.quartz.properties.org.quartz.threadPool.threadCount=5
+
+#qiniu
+qiniu.key.access=tErZduAzg_Ab25GjTR71p3Of5Kyg2ash-P_NJJsx
+qiniu.key.secret=lUtIpj5IA19Phzun8Wly-6z5QiSXe1mqzqLrBQcU
+qiniu.bucket.header.name=franky-header
+qiniu.bucket.header.url=http://rsdirf9dp.hn-bkt.clouddn.com
